--- a/projets.html
+++ b/projets.html
@@ -79,6 +79,7 @@
                             <p>- L'API Majestic sert à récupérer les informations d'un site web (nombre de backlinks, nombre de pages indexées, nombre de mots clés…)</p>
                             <p>- L'API Semrush sert à récupérer les informations d'un site web (nombre de backlinks, nombre de pages indexées, nombre de mots clés…)</p>
                         </div>
+                        <div onclick="showPreuve()" class="buttonPreuve">Voir les preuves</div>
                         <div class="preuveContainer">
                             <div onclick="img2()" class="buttonPreuve">Preuves suivantes</div>
                             <div class="imgHide" id="img21">
@@ -117,6 +118,7 @@
                             <p>L'outils a pour but de permettre aux consultants de repérer rapidement si un site a subi une refonte ou si le nom de domaine a été racheter</p>
                             <p>Pour le développement j'ai donc suivit les critères qui m'étaient imposés. De plus j'ai du réaliser des tests d'intégration dans les apis Wayback et WHOIS afin de vérifier si elles effectuent bien leurs tâches étant donné que cet outils utilise ces deux apis</p>
                         </div>
+                        <div onclick="showPreuve()" class="buttonPreuve">Voir les preuves</div>
                         <div class="preuveContainer">
                             <div onclick="img3()" class="buttonPreuve">Preuves suivantes</div>
                             <div class="imgHide3" id="img31">
@@ -155,6 +157,7 @@
                             <p>Pour le développement j'ai donc suivit les critères qui m'étaient imposés. De plus j'ai du réaliser des tests d'intégration pour m'assurer du fonctionnement de chaque méthode. </p>
                         </div>
                         <h2>Preuves du projet :</h2>
+                        <div onclick="showPreuve()" class="buttonPreuve">Voir les preuves</div>
                         <div class="preuveContainer">
                             <div class="buttonPreuve">
                                 <a href="/pdf/RocketLinks.pdf">Objectifs du projet</a>.
@@ -198,6 +201,7 @@
                             <p>Le site est développé pour les membres de l'école de musique afin qu'il puisse s'incrire à court de musique, acccéder à leur planning...</p>
                             <p>Pour le développement on a donc utilisé la méthode de gestion de projet SCRUM, où on a réfléchit aux fonctionnalités en définicent les taches et les critères d'aceptation. Puis on a mis en place de sprint pour ce concentrer que sur certaines parties du projet et être efficace</p>
                         </div>
+                        <div onclick="showPreuve()" class="buttonPreuve">Voir les preuves</div>
                         <div class="preuveContainer">
                             <div onclick="img()" class="buttonPreuve">Preuves suivantes</div>
                             <div class="imgHide" id="img1">
