--- a/competences.html
+++ b/competences.html
@@ -89,7 +89,7 @@
                     <div class="projetContainer">
                         <div class="projetCard">
                             <div class="imgContainer">
-                                <img src="/img/image.png">
+                                <img src="/img/Wayback_Machine_logo_2010.svg">
                             </div>
                             <div class="descriptionContainer">
                                 <h3>Projet API zaacom</h3>
@@ -100,7 +100,7 @@
                         </div>
                         <div class="projetCard">
                             <div class="imgContainer">
-                                <img src="/img/code-javascript-dans-l-éditeur-de-texte-34208289.jpg">
+                                <img src="/img/rocketlinks.png">
                             </div>
                             <div class="descriptionContainer">
                                 <h3>Projet d'Archivage</h3>
@@ -206,64 +206,24 @@
                         </ul>
                     </div>
                     <div class="projetContainer">
-                        <div class="projetCard">
-                            <div class="imgContainer">
-                                <img src="/img/image.png">
+                        <div class="certifContainer">
+                            <div>
+                                <img src="/img/certif.png">
                             </div>
-                            <div class="descriptionContainer">
-                                <h3>Titre Projet</h3>
-                                <p>Description :</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit ante mi, vel gravida nisl finibus vitae. Maecenas sodales condimentum luctus. Nulla tempor sodales venenatis. Fusce feugiat nulla in leo iaculis ultricies. Morbi fringilla laoreet dolor non ultrices. Nullam sed mauris nulla</p>
-                                <a href="/portfolio/projets/2" class="tiny ui primary button">En savoir plus</a>
+                            <div class="buttonPreuve">
+                                <a href="/pdf/mooc.pdf">Objectifs du projet</a>.
+                            </div>
+                            <div class="buttonPreuve">
+                                <a href="/pdf/secnum.pdf">Objectifs du projet</a>.
                             </div>
                         </div>
-                        <div class="projetCard">
-                            <div class="imgContainer">
-                                <img src="/img/code-javascript-dans-l-éditeur-de-texte-34208289.jpg">
-                            </div>
-                            <div class="descriptionContainer">
-                                <h3>Titre Projet</h3>
-                                <p>Description :</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit ante mi, vel gravida nisl finibus vitae. Maecenas sodales condimentum luctus. Nulla tempor sodales venenatis. Fusce feugiat nulla in leo iaculis ultricies. Morbi fringilla laoreet dolor non ultrices. Nullam sed mauris nulla</p>
-                                <a class="tiny ui primary button">En savoir plus</a>
-                            </div>
+                        <div class="proContainer">
+
                         </div>
                     </div>
                 </div>
             </div>
     </main>
-    <footer>
-        <div class="ui inverted vertical footer segment">
-            <div class="ui container">
-                <div class="ui stackable inverted divided equal height stackable grid">
-                    <div class="three wide column">
-                        <h4>A propos</h4>
-                        <div class="ui inverted link list">
-                            <a class="item" href="#ecole-ancre">Notre École</a>
-                            <a class="item" href="#instrument-ancre">Nos Instruments</a>
-                            <a class="item" href="">Rêgles & Confidentialités</a>
-                        </div>
-                    </div>
-                    <div class="three wide column">
-                        <h4>A propos</h4>
-                        <div class="ui inverted link list">
-                            <a class="item" href="#ecole-ancre">Notre École</a>
-                            <a class="item" href="#instrument-ancre">Nos Instruments</a>
-                            <a class="item" href="">Rêgles & Confidentialités</a>
-                        </div>
-                    </div>
-                    <div class="seven wide column">
-                        <h4>E-Music</h4>
-                        <div class="ui list">
-                            <div class="item">Tous droits réservée.</div>
-                            <div class="item">Site Réalisés par Clément H</div>
-                            <div class="item">Co produit par Kilian L</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
 </div> <!-- Fermeture div APP-->
 </body>
 </div>
