--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                                     Accueil
                                 </a>
                                 <div class="right menu">
-                                    <a class="item" href="/projets.html">
+                                    <a class="item" href="/projets.html?projet=1">
                                         Projets
                                     </a>
                                     <a class="item" href="/competences.html">
@@ -48,7 +48,7 @@
                                 <span>Compétences</span>
                             </div>
                             <p>Présentation des compétences avec projets associés</p>
-                            <a href="/portfolio/competences" class="ui blue basic button">Plus de détails</a>
+                            <a href="/competences.html" class="ui blue basic button">Plus de détails</a>
                         </div>
                     </div>
                     <div class="ui card">
@@ -58,7 +58,7 @@
                                 <span>Projets/Preuves</span>
                             </div>
                             <p>Présentation de tout les projets avec les preuves associées</p>
-                            <a href="/portfolio/projets/1" class="ui blue basic button">Plus de détails</a>
+                            <a href="/projets.html?projet=1" class="ui blue basic button">Plus de détails</a>
                         </div>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                                 <span>Veille juridique</span>
                             </div>
                             <p>Présentation de ma veille juridique et informationnelle</p>
-                            <a href="/portfolio/veille" class="ui blue basic button">Plus de détails</a>
+                            <a href="/veille.html" class="ui blue basic button">Plus de détails</a>
                         </div>
                     </div>
                 </div>
