--- a/competences.html
+++ b/competences.html
@@ -207,7 +207,7 @@
                     </div>
                     <div class="projetContainer">
                         <div class="certifContainer">
-                            <div>
+                            <div class="imgContainer">
                                 <img src="/img/certif.png">
                             </div>
                             <div class="buttonPreuve">
