--- a/competences.html
+++ b/competences.html
@@ -218,7 +218,9 @@
                             </div>
                         </div>
                         <div class="proContainer">
-
+                            <div class="buttonPreuve">
+                                <a href="https://www.linkedin.com/in/kilian-levasseur-5662b0217/">Objectifs du projet</a>.
+                            </div>
                         </div>
                     </div>
                 </div>
