--- a/competences.html
+++ b/competences.html
@@ -211,15 +211,15 @@
                                 <img src="/img/certif.png">
                             </div>
                             <div class="buttonPreuve">
-                                <a href="/pdf/mooc.pdf">Objectifs du projet</a>.
+                                <a href="/pdf/mooc.pdf">MODULE 1 : LE RGPD ET SES NOTIONS CLÉS</a>.
                             </div>
                             <div class="buttonPreuve">
-                                <a href="/pdf/secnum.pdf">Objectifs du projet</a>.
+                                <a href="/pdf/secnum.pdf">SECNUM Académie</a>.
                             </div>
                         </div>
                         <div class="proContainer">
                             <div class="buttonPreuve">
-                                <a href="https://www.linkedin.com/in/kilian-levasseur-5662b0217/">Objectifs du projet</a>.
+                                <a href="https://www.linkedin.com/in/kilian-levasseur-5662b0217/">Profil Linkedin</a>.
                             </div>
                         </div>
                     </div>
