--- a/competences.html
+++ b/competences.html
@@ -206,16 +206,19 @@
                         </ul>
                     </div>
                     <div class="projetContainer">
+
                         <div class="certifContainer">
                             <div class="imgContainer">
                                 <img src="/img/certif.png">
                             </div>
+                            <p>Auto formation sur certains langage de programation comme par exemple JavaScript, reforcement des connaissances</p>
                             <div class="buttonPreuve">
                                 <a href="/pdf/mooc.pdf">MODULE 1 : LE RGPD ET SES NOTIONS CLÉS</a>.
                             </div>
                             <div class="buttonPreuve">
                                 <a href="/pdf/secnum.pdf">SECNUM Académie</a>.
                             </div>
+                            <p>Certfications orientées cybersécurité et RGPD pour connaitre et maitriser les bonnes pratiques dans le domaine de la cybersécurité</p>
                         </div>
                         <div class="proContainer">
                             <div class="buttonPreuve">
