--- a/projets.html
+++ b/projets.html
@@ -163,7 +163,7 @@
                                 <a href="/pdf/RocketLinks2.pdf">Diagramme des taches</a>.
                             </div>
                             <div>
-                                <img src="img/rocketlinks.png"></img>
+                                <img src="img/rocketlinks2.png"></img>
                             </div>
                         </div>
                     </div>
