--- a/projets.html
+++ b/projets.html
@@ -62,11 +62,16 @@
                     <div class="detailsContainer">
                         <h2>Compétences Associés : </h2>
                         <ul>
-                            <li>Répondre aux incidents et aux demandes d’assistance et d’évolution :</li>
-                            <ul>
-                                <li>- Traiter des demandes concernant les applications</li>
-                            </ul>
-
+                            <li>Répondre aux incidents et aux demandes d’assistance et d’évolution :
+                                <ul>
+                                    <li>- Traiter des demandes concernant les applications</li>
+                                </ul>
+                            </li>
+                            <li>Mettre à disposition des utilisateurs un service informatique:
+                                <ul>
+                                    <li>- Réaliser les tests d’intégration et d’acceptation d’un service</li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                     <div class="projetContainerData">
