--- a/veille.html
+++ b/veille.html
@@ -45,17 +45,21 @@
                         <img src="/img/image.png">
                     </div>
                     <div class="content">
-                        <a class="header">Kristy</a>
+                        <a class="header">Plainte déposée contre Microsoft : GitHub Copilot est accusé de voler du code open source !'</a>
                         <div class="meta">
-                            <span class="date">Joined in 2013</span>
+                            <span class="date">10 Novembre 2022</span>
                         </div>
                         <div class="description">
-                            Kristy is an art director living in New York.
+                            GitHub Copilot est dans le viseur de la justice : une plainte collective a été déposée par des développeurs
                         </div>
                         <div onclick="new Modal(
-                            'test',
-                            'Lorem ipsum dolor sit amet,orttitor purus et, sollicitudin augue. Morbi vitae nulla in nunc aliquet aliquam eu quis sem. Nullam suscipit convallis mauris et interdum. Sed sodales nibh quis mattis ultrices. Fusce accumsan imperdiet quam sed ultrices. Integer ut vulputate urna, ac ultricies velit. Aenean varius tellus et ante sollicitudin, eu pretium velit aliquet. Vestibulum non molestie libero, quis molestie nisi. Fusce porta tellus sed diam accumsan finibus.',
-                            '/img/image.png').open()"
+                            'Avec « Hey, GitHub ! », Copilot teste un assistant vocal',
+                            'Microsoft, GitHub et OpenAI sont visés par une plainte collective liée à Copilot, L\'assistant au code basé sur l\'IA violerait les termes des licences open source et porterait atteinte aux droits de développeurs. La somme de neuf milliards de dollars de dommages et intérêts est réclamée. Les licences de code open source, comme celles de type GPL, Apache et MIT, exigent l\'attribution du nom de l\'auteur et la définition de droits d\'auteur particuliers. Or, Copilot supprime cet élément. Outre les violations de licence, la plainte allègue que l’assistant au code viole les éléments suivants : '+
+                            '- Les conditions de service et les politiques de confidentialité de GitHub,\n'+
+                            '- Le DMCA 1202, qui interdit la suppression des informations relatives à la gestion des droits d\'auteur,\n'+
+                              '- Le California Consumer Privacy Act,\n'+
+                            '- D\'autres lois donnant lieu à des réclamations juridiques connexes.',
+                            '/img/heygithub.png').open()"
                          class="ui primary button">
                             Plus de détails
                         </div>
@@ -66,14 +70,17 @@
                         <img src="/img/image.png">
                     </div>
                     <div class="content">
-                        <a class="header">Kristy</a>
+                        <a class="header">Quel navigateur est le plus respectueux de votre vie privée ?</a>
                         <div class="meta">
-                            <span class="date">Joined in 2013</span>
+                            <span class="date">18 octobre 2022</span>
                         </div>
                         <div class="description">
-                            Kristy is an art director living in New York.
+                            quel est le navigateur qui respecte le mieux votre vie privée ?
                         </div>
-                        <div class="ui primary button">
+                        <div onclick="new Modal(
+                            'Quel navigateur est le plus respectueux de votre vie privée ?',
+                            'Comparaison entre 10 navigateurs : Brave, Google Chrome, Microsoft Edge, Mozilla Firefox, Librewolf, Opera, Safari, Tor, Ungoogled et Vivaldi. Catégories pour les tests : le stockage des informations sur le disque, la résistance au fingerprint, le blocage des paramètres de tracking dans les URLs, le blocage des traqueurs dans le contenu, encore le blocage des cookies. Le navigateur le plus respectueux pour notre vie privée est Brave et le pire serait Google Chrome',
+                            '/img/navigateur.jpg').open()" class="ui primary button">
                             Plus de détails
                         </div>
                     </div>
@@ -83,14 +90,17 @@
                         <img src="/img/image.png">
                     </div>
                     <div class="content">
-                        <a class="header">Kristy</a>
+                        <a class="header">Sanction de 800 000 euros à l’encontre de la société DISCORD INC.</a>
                         <div class="meta">
-                            <span class="date">Joined in 2013</span>
+                            <span class="date">17 novembre 2022</span>
                         </div>
                         <div class="description">
-                            Kristy is an art director living in New York.
+                            Le 10 novembre 2022, la CNIL a prononcé à l’encontre de la société DISCORD INC. une amende de 800 000 euros
                         </div>
-                        <div class="ui primary button">
+                        <div onclick="new Modal(
+                            'Sanction de 800 000 euros à l’encontre de la société DISCORD INC.',
+                            'Le 10 novembre 2022, la CNIL a prononcé à l’encontre de la société DISCORD INC. une amende de 800 000 euros pour avoir manqué à plusieurs obligations du RGPD, notamment en matière de durées de conservation et de sécurité des données personnelles, non respect de l\'article 5.1.e du RGPD (durée conservation des données), Un manquement à l’obligation d’information (article 13 du RGPD) elle ne comportait ni durées précises, ni critères permettant de déterminer celles-ci. Un manquement à l’obligation de garantir la protection des données par défaut (article 25.2 du RGPD). Un manquement à l’obligation d’assurer la sécurité des données personnelles (article 32 du RGPD). Un manquement à l’obligation d’effectuer une analyse d’impact relative à la protection des données (article 35 du RGPD).',
+                            '/img/cnildiscord.png').open()" class="ui primary button">
                             Plus de détails
                         </div>
                     </div>
@@ -143,38 +153,6 @@
                 </div>
             </div>
     </main>
-    <footer>
-        <div class="ui inverted vertical footer segment">
-            <div class="ui container">
-                <div class="ui stackable inverted divided equal height stackable grid">
-                    <div class="three wide column">
-                        <h4>A propos</h4>
-                        <div class="ui inverted link list">
-                            <a class="item" href="#ecole-ancre">Notre École</a>
-                            <a class="item" href="#instrument-ancre">Nos Instruments</a>
-                            <a class="item" href="">Rêgles & Confidentialités</a>
-                        </div>
-                    </div>
-                    <div class="three wide column">
-                        <h4>A propos</h4>
-                        <div class="ui inverted link list">
-                            <a class="item" href="#ecole-ancre">Notre École</a>
-                            <a class="item" href="#instrument-ancre">Nos Instruments</a>
-                            <a class="item" href="">Rêgles & Confidentialités</a>
-                        </div>
-                    </div>
-                    <div class="seven wide column">
-                        <h4>E-Music</h4>
-                        <div class="ui list">
-                            <div class="item">Tous droits réservée.</div>
-                            <div class="item">Site Réalisés par Clément H</div>
-                            <div class="item">Co produit par Kilian L</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
 </div> <!-- Fermeture div APP-->
 </body>
 </div>
