--- a/veille.html
+++ b/veille.html
@@ -42,7 +42,7 @@
             <div id="veilleContainer" class="veilleContainer">
                 <div class="ui card">
                     <div class="image">
-                        <img src="/img/image.png">
+                        <img src="/img/heygithub.png">
                     </div>
                     <div class="content">
                         <a class="header">Plainte déposée contre Microsoft : GitHub Copilot est accusé de voler du code open source !'</a>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="ui card">
                     <div class="image">
-                        <img src="/img/image.png">
+                        <img src="/img/navigateur.jpg">
                     </div>
                     <div class="content">
                         <a class="header">Quel navigateur est le plus respectueux de votre vie privée ?</a>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="ui card">
                     <div class="image">
-                        <img src="/img/image.png">
+                        <img src="/img/cnildiscord.png">
                     </div>
                     <div class="content">
                         <a class="header">Sanction de 800 000 euros à l’encontre de la société DISCORD INC.</a>
