--- a/veille.html
+++ b/veille.html
@@ -24,7 +24,7 @@
                                     Accueil
                                 </a>
                                 <div class="right menu">
-                                    <a class="item" href="/projets.html">
+                                    <a class="item" href="/projets.html?projet=1">
                                         Projets
                                     </a>
                                     <a class="item" href="/competences.html">
@@ -42,7 +42,7 @@
             <div id="veilleContainer" class="veilleContainer">
                 <div class="ui card">
                     <div class="image">
-                        <img src="/img/heygithub.png">
+                        <img src="/img/image.png">
                     </div>
                     <div class="content">
                         <a class="header">Plainte déposée contre Microsoft : GitHub Copilot est accusé de voler du code open source !'</a>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="ui card">
                     <div class="image">
-                        <img src="/img/navigateur.jpg">
+                        <img src="/img/image.png">
                     </div>
                     <div class="content">
                         <a class="header">Quel navigateur est le plus respectueux de votre vie privée ?</a>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="ui card">
                     <div class="image">
-                        <img src="/img/cnildiscord.png">
+                        <img src="/img/image.png">
                     </div>
                     <div class="content">
                         <a class="header">Sanction de 800 000 euros à l’encontre de la société DISCORD INC.</a>
