--- a/projets.html
+++ b/projets.html
@@ -204,6 +204,9 @@
                             <p>Pour le développement on a donc utilisé la méthode de gestion de projet SCRUM, où on a réfléchit aux fonctionnalités en définicent les taches et les critères d'aceptation. Puis on a mis en place de sprint pour ce concentrer que sur certaines parties du projet et être efficace</p>
                         </div>
                         <div class="preuveContainer">
+                            <div class="buttonPreuve">
+                                <a href="https://srv2-vm-2107.sts-sio-caen.info/">Voir l'application</a>.
+                            </div>
                             <div onclick="img()" class="buttonPreuve">Preuves suivantes</div>
                             <div class="imgHide" id="img1">
                                 <img src="img/emusic.png"></img>
