add tableau synthèse

--- a/competences.html
+++ b/competences.html
@@ -24,7 +24,10 @@
                                     Accueil
                                 </a>
                                 <div class="right menu">
-                                    <a class="item" href="/projets.html">
+                                    <a class="item" href="/pdf/Tableau.pdf">
+                                        Tableau de synthèse
+                                    </a>
+                                    <a class="item" href="/projets.html?projet=1">
                                         Projets
                                     </a>
                                     <a class="item" href="/competences.html">
