--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                                     Accueil
                                 </a>
                                 <div class="right menu">
+                                    <a class="item" href="/pdf/Tableau.pdf">
+                                        Tableau de synthèse
+                                    </a>
                                     <a class="item" href="/projets.html?projet=1">
                                         Projets
                                     </a>
