--- a/projets.html
+++ b/projets.html
@@ -177,7 +177,50 @@
                     </div>
                 </div>
                 <div id="4" class="ui bottom attached segment">
-                    <h1>PlanitPokerStar</h1>
+                    <div class="detailsContainer">
+                        <h2>Compétences Associés : </h2>
+                        <ul>
+                            <li>Travailler en mode projet :
+                                <ul>
+                                    <li>- Analyser les objectifs et les modalités d’organisation d’un projet</li>
+                                    <li>- Planifier les activités</li>
+                                    <li>- Évaluer les indicateurs de suivi d’un projet et analyser les écarts</li>
+                                </ul>
+                            </li>
+                            <li>Développer la présence en ligne de l’organisation :
+                                <ul>
+                                    <li>- Participer à l’évolution d’un site Web exploitant les données de l’organisation</li>
+                                    <li>- Participer à la valorisation de l’image de l’organisation sur les médias numériques en tenant compte du cadre juridique et des enjeux économiques</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="projetContainerData">
+                        <div>
+                            <h2>Présentation du projet :</h2>
+                            <p>Projet réalisé durant la 2ème année de BTS SIO consistant à réaliser le site d'une école de musique.</p>
+                            <p>Le site est développé pour les membres de l'école de musique afin qu'il puisse s'incrire à court de musique, acccéder à leur planning...</p>
+                            <p>Pour le développement on a donc utilisé la méthode de gestion de projet SCRUM, où on a réfléchit aux fonctionnalités en définicent les taches et les critères d'aceptation. Puis on a mis en place de sprint pour ce concentrer que sur certaines parties du projet et être efficace</p>
+                        </div>
+                        <div class="preuveContainer">
+                            <div onclick="img4()" class="buttonPreuve">Preuves suivantes</div>
+                            <div class="imgHide" id="img41">
+                                <img src="img/planit1.png"></img>
+                            </div>
+                            <div class="imgHide" id="img42">
+                                <img src="img/planit2.png"></img>
+                            </div>
+                            <div class="imgHide" id="img43">
+                                <img src="img/planit3.png"></img>
+                            </div>
+                            <div class="imgHide" id="img44">
+                                <img src="img/planit4.png"></img>
+                            </div>
+                            <div class="imgHide" id="img45">
+                                <img src="img/planit5.png"></img>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div id="5" class="ui bottom attached segment">
                     <div class="detailsContainer">
@@ -196,7 +239,6 @@
                                     <li>- Participer à la valorisation de l’image de l’organisation sur les médias numériques en tenant compte du cadre juridique et des enjeux économiques</li>
                                 </ul>
                             </li>
-
                         </ul>
                     </div>
                     <div class="projetContainerData">
