--- a/projets.html
+++ b/projets.html
@@ -198,8 +198,7 @@
                     <div class="projetContainerData">
                         <div>
                             <h2>Présentation du projet :</h2>
-                            <p>Projet réalisé durant la 2ème année de BTS SIO consistant à réaliser le site d'une école de musique.</p>
-                            <p>Le site est développé pour les membres de l'école de musique afin qu'il puisse s'incrire à court de musique, acccéder à leur planning...</p>
+                            <p>Projet réalisé durant la 2ème année de BTS SIO consistant à réaliser une application de vote pour les taches d'un projet utilisant la méthode agile .</p>
                             <p>Pour le développement on a donc utilisé la méthode de gestion de projet SCRUM, où on a réfléchit aux fonctionnalités en définicent les taches et les critères d'aceptation. Puis on a mis en place de sprint pour ce concentrer que sur certaines parties du projet et être efficace</p>
                         </div>
                         <div class="preuveContainer">
