--- a/projets.html
+++ b/projets.html
@@ -202,6 +202,9 @@
                             <p>Pour le développement on a donc utilisé la méthode de gestion de projet SCRUM, où on a réfléchit aux fonctionnalités en définicent les taches et les critères d'aceptation. Puis on a mis en place de sprint pour ce concentrer que sur certaines parties du projet et être efficace</p>
                         </div>
                         <div class="preuveContainer">
+                            <div class="buttonPreuve">
+                                <a href="/pdf/planit2.pdf">Voir les Users Stories</a>.
+                            </div>
                             <div onclick="img4()" class="buttonPreuve">Preuves suivantes</div>
                             <div class="imgHide" id="img41">
                                 <img src="img/planit1.png"></img>
